@@ -1,6 +1,14 @@
 package com.exercici0501;
 
+import org.json.JSONArray;
+import org.json.JSONObject;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.InvalidParameterException;
+import java.util.ArrayList;
+import java.util.HashMap;
 
 public class Restaurants {
 
@@ -76,50 +84,29 @@ public class Restaurants {
      * - S'ha afegit un nou 'client' amb 'id': 1
      * - S'ha afegit un nou 'servei' amb 'id': 5
      */
-    public static void loadData(String filePath) {
-        AppData db = AppData.getInstance();
-        try {
-            String content = new String(Files.readAllBytes(Paths.get(filePath)));
-            JSONObject jsonObject = new JSONObject(content);
+    public static void loadData(String filePath) throws IOException {
+        String content = Files.readString(Paths.get(filePath));
+        JSONObject jsonObject = new JSONObject(content);
+        JSONArray restaurants = jsonObject.getJSONArray("restaurants");
+        JSONArray clients = jsonObject.getJSONArray("clients");
+        JSONArray services = jsonObject.getJSONArray("services");
+        for (int i = 0; i < restaurants.length(); i++) {
+            JSONObject restaurant = restaurants.getJSONObject(i);
+            addRestaurant(restaurant.getInt("id_restaurant"), restaurant.getString("name"), restaurant.getString("kind"), restaurant.getInt("tables"), restaurant.getString("pricing"));
+            System.out.println("S'ha afegit un nou 'restaurant' amb 'id': " + restaurant.getInt("id_restaurant"));
 
-            JSONArray restaurants = jsonObject.getJSONArray("restaurants");
-            for (int i = 0; i < restaurants.length(); i++) {
-                JSONObject restaurant = restaurants.getJSONObject(i);
-                addRestaurant(
-                    restaurant.getInt("id_restaurant"),
-                    restaurant.getString("name"),
-                    restaurant.getString("kind"),
-                    restaurant.getInt("tables"),
-                    restaurant.getString("pricing")
-                );
-                System.out.println("S'ha afegit un nou 'restaurant' amb 'id': " + restaurant.getInt("id_restaurant"));
-            }
-
-            JSONArray clients = jsonObject.getJSONArray("clients");
-            for (int i = 0; i < clients.length(); i++) {
-                JSONObject client = clients.getJSONObject(i);
-                int clientId = addClient(
-                    client.getString("name"),
-                    client.getString("birth"),
-                    client.getBoolean("isVIP")
-                );
-                System.out.println("S'ha afegit un nou 'client' amb 'id': " + id_client);
-            }
-
-            JSONArray serveis = jsonObject.getJSONArray("services");
-            for (int i = 0; i < serveis.length(); i++) {
-                JSONObject servei = serveis.getJSONObject(i);
-                int serveiId = addService(
-                    servei.getInt("id_restaurant"),
-                    servei.getInt("id_client"),
-                    servei.getString("date"),
-                    servei.getDouble("expenditure")
-                );
-                System.out.println("S'ha afegit un nou 'serveir' amb 'id': " + id_servei);
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
         }
+        for (int i = 0; i < clients.length(); i++) {
+            JSONObject client = clients.getJSONObject(i);
+            int clientId = addClient(client.getString("name"), client.getString("birth"), client.getBoolean("isVIP"));
+            System.out.println("S'ha afegit un nou 'client' amb 'id': " + clientId);
+        }
+        for (int i = 0; i < services.length(); i++) {
+            JSONObject service = services.getJSONObject(i);
+            int serviceId = addService(service.getInt("id_restaurant"), service.getInt("id_client"), service.getString("date"), service.getDouble("expenditure"));
+            System.out.println("S'ha afegit un nou 'servei' amb 'id': " + serviceId);
+        }
+        System.out.println("Dades carregades correctament");
     }
 
     /**
@@ -132,12 +119,94 @@ public class Restaurants {
      * │ DongFang   │ Xinès           │ 15     │ 12   │
      * └────────────┴─────────────────┴────────┴──────┘
      */
-    public static void llistarTaulaRestautants() {
+    public static String formatRow(String[] values, int[] columnWidths) {
+        String rst = "";
+        for (int i = 0; i < values.length; i++) { 
+            rst += "│";
+            String value = values[i];
+            if (value.length() > columnWidths[i]) {
+                value = value.substring(0, columnWidths[i]);
+            }
+            rst += value;
+            int spaceCount = columnWidths[i] - value.length();
+            if (spaceCount > 0) {
+                rst += " ".repeat(spaceCount);
+            }
+            
+        }
+        rst += "│";
+        return rst;
+    }
+    public static String generaMarcTaula(int[] columnWidths, char[] separators) {
+        String rst = "";
+        rst += separators[0];
+        for (int i = 0; i < columnWidths.length; i++) {
+            for (int j = 0; j < columnWidths[i]; j++) {
+                rst += '─';
+            }
+            if (i < columnWidths.length - 1) {
+                rst += separators[1];
+            }
+        }
+        rst += separators[2];
+        return rst;
+    }
+    public static void llistarTaulaRestautants() throws IOException {
+        AppData db = AppData.getInstance();
+        ArrayList<HashMap<String, Object>> restaurants = db.query("SELECT * FROM restaurants");
 
+
+        String[] titol = {"ID", "Nom", "Tipus", "Taules", "Preu"};
+        int[] columnWidths = {10, 20, 20, 8, 5};
+        char[] separadorsTop = {'┌', '┬', '┐'};
+        char[] separadorsMid = {'├', '┼', '┤'};
+        char[] separadorsBot = {'└', '┴', '┘'};
+
+        System.out.println(generaMarcTaula(columnWidths, separadorsTop));
+        System.out.println(formatRow(titol, columnWidths));
+        System.out.println(generaMarcTaula(columnWidths, separadorsMid));
+
+        for (int i = 0; i < restaurants.size(); i++) {
+            HashMap<String, Object> restaurant = new HashMap<>(restaurants.get(i));
+            String[] row = {
+                String.valueOf(restaurant.get("id_restaurant")),
+                (String) restaurant.get("name"),
+                (String) restaurant.get("kind"),
+                String.valueOf(restaurant.get("tables")),
+                (String) restaurant.get("pricing")
+            };
+            System.out.println(formatRow(row, columnWidths));
+        }
+
+        System.out.println(generaMarcTaula(columnWidths, separadorsBot));
     }
 
     public static void llisarTaulaClients() {
 
+        AppData db = AppData.getInstance();
+        ArrayList<HashMap<String, Object>> clients = db.query("SELECT * FROM clients");
+
+        String[] titol = {"ID", "Nom", "Data de naixement", "VIP"};
+        int[] columnWidths = {10, 20, 20, 5};
+        char[] separadorsTop = {'┌', '┬', '┐'};
+        char[] separadorsMid = {'├', '┼', '┤'};
+        char[] separadorsBot = {'└', '┴', '┘'};
+
+        System.out.println(generaMarcTaula(columnWidths, separadorsTop));
+        System.out.println(formatRow(titol, columnWidths));
+        System.out.println(generaMarcTaula(columnWidths, separadorsMid));
+
+        for (int i = 0; i < clients.size(); i++) {
+            HashMap<String, Object> client = new HashMap<>(clients.get(i));
+            String[] row = {
+                String.valueOf(client.get("id_client")),
+                (String) client.get("name"),
+                (String) client.get("birth"),
+                (String) client.get("isVIP")
+            };
+            System.out.println(formatRow(row, columnWidths));
+        }
+        System.out.println(generaMarcTaula(columnWidths, separadorsBot));
     }
 
     /**
@@ -148,7 +217,40 @@ public class Restaurants {
      * @param idClient
      */
     public static void llistarTaulaServeis(int idClient) throws InvalidParameterException {
+        AppData db = AppData.getInstance();
+        ArrayList<HashMap<String, Object>> services;
+        
+        if (idClient == -1) {
+            services = db.query("SELECT * FROM services");
+        } else {
+            services = db.query(String.format("SELECT * FROM services WHERE id_client = %d", idClient));
+            if (services.isEmpty()) {
+                throw new InvalidParameterException("Invalid client ID: " + idClient);
+            }
+        }
 
+        String[] titol = {"ID Servei", "ID Restaurant", "ID Client", "Data", "Despesa"};
+        int[] columnWidths = {10, 15, 10, 15, 10};
+        char[] separadorsTop = {'┌', '┬', '┐'};
+        char[] separadorsMid = {'├', '┼', '┤'};
+        char[] separadorsBot = {'└', '┴', '┘'};
+
+        System.out.println(generaMarcTaula(columnWidths, separadorsTop));
+        System.out.println(formatRow(titol, columnWidths));
+        System.out.println(generaMarcTaula(columnWidths, separadorsMid));
+
+        for (HashMap<String, Object> service : services) {
+            String[] row = {
+                String.valueOf(service.get("id_servei")),
+                String.valueOf(service.get("id_restaurant")),
+                String.valueOf(service.get("id_client")),
+                (String) service.get("date"),
+                String.valueOf(service.get("expenditure"))
+            };
+            System.out.println(formatRow(row, columnWidths));
+        }
+
+        System.out.println(generaMarcTaula(columnWidths, separadorsBot));
     }
 
     /** Mostra dues llistes, 
@@ -164,6 +266,28 @@ public class Restaurants {
      * - ??
      */
     public static void llistarMitjanes() {
+        AppData db = AppData.getInstance();
+        ArrayList<HashMap<String, Object>> restaurants = db.query("SELECT * FROM restaurants");
 
+        double total = 0;
+        for (HashMap<String, Object> restaurant : restaurants) {
+            total += Double.parseDouble((String) restaurant.get("pricing"));
+        }
+        double average = total / restaurants.size();
+
+        System.out.printf("Preu mitjà: %.2f€\n", average);
+        System.out.println("Restaurants barats:");
+        for (HashMap<String, Object> restaurant : restaurants) {
+            if (Double.parseDouble((String) restaurant.get("pricing")) < average) {
+                System.out.println("- " + restaurant.get("name"));
+            }
+        }
+
+        System.out.println("Restaurants cars:");
+        for (HashMap<String, Object> restaurant : restaurants) {
+            if (Double.parseDouble((String) restaurant.get("pricing")) >= average) {
+                System.out.println("- " + restaurant.get("name"));
+            }
+        }
     }
 }
